# web-crawler

./: README.md
backend/: .env-example  Makefile  pyproject.toml
backend/app/: main.py  utils.py
backend/app/api/: news_router.py  news_router_test.py
backend/app/models/: __init__.py  news_model.py
backend/app/services/: __init__.py  news_service.py  news_services_test.py
frontend/: .env-example  .gitignore  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: Card.tsx  Loader.tsx  NewsList.tsx
frontend/src/config/: envConstants.ts
frontend/src/services/: newsServices.ts
frontend/src/styles/: CardStyles.css  LoaderStyles.css  NewsList.css
frontend/src/utils/: GeneralResponse.ts  Types.ts
