[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["antonio-xzz <italo.zambrano@epn.edu.ec>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
pydantic = "^2.9.1"
aiohttp = "^3.10.5"
pytest = "^8.3.3"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
